# distrotech-core

./: .gitignore  Makefile  Makefile.am  Makefile.in  configure  configure.ac  project.config
attic/: adsluncap
attic/userguides/: netsentry.css
etc/: asound.state  auto.master  bill.conf  bill.conf.orig  blkid.tab  blkid.tab.old  devfsd.conf  frox.conf  group  inetd.conf  ippool.conf  issue  ld.so.conf  ldap.conf.orig  logcheck.ignore  login.config  login.defs  mgetty.conf  mgetty.config  minirc.dfl  misdnlfilt  modprobe.conf  modprobe.isdn  modules.conf  modules.devfs  motd  mtab  my.cnf  nscd.conf  nsswitch.conf.boot  nsswitch.conf.ldap  odbc.ini  omniORB.cfg  omniORB.cfg.dist  omniORB.cfg.orig  openl2tpd.conf  openl2tpd.conf.orig  pam.conf  passwd  printcap  (+27 more)
etc/GNUstep/: GNUstep.conf
etc/apache/: usage.tmpl
etc/asterisk/: HOWTO  agents.conf  alarmreceiver.conf  ast.out  asterisk.conf  capi.conf  cdr.conf  cdr_adaptive_odbc.conf  cdr_pgsql.conf  codecs.conf  ddi.conf  extensions.conf  features.conf  func_odbc.conf  h323.conf  iax.conf  indications.conf  ivrmenu.conf  ivrmenu.conf.orig  local.conf.orig  macros.conf  manager.conf  misdn.conf  musiconhold.conf  oss.conf  private.conf  queues.conf  res_odbc.conf  sip_notify.conf  zapata.conf  zapata.conf.orig
etc/avahi/: avahi-autoipd.action  avahi-daemon.conf
etc/grub.d/: 00_header  05_splash  10_linux  20_linux_xen
etc/hotplug.d/: core  hotplug.functions  modules_local.pcimap
etc/httpd/: httpd.conf.orig
etc/joe/: jmacsrc  joerc  jpicorc  jstarrc  rjoerc
etc/logcheck/: hacking  violations
etc/lvm/: lvm.conf
etc/modprobe.d/: ipv6.conf  modprobe.conf
etc/netatalk/: AppleVolumes.default  afpd.conf  atalkd.conf.orig
etc/openldap/: slapd.conf.default  startup.ldif
install/: default.conf  default.conf.sysvars  fixup.pl  getschema  instguage  instguage.pl  instpkg  mkbootimg  mkinsttar  mkupdate  netsentry-version  sysconfig  tarkernel
lsb/: Makefile  lsb-release  lsb-release.in
sbin/: dhclient-script  hotplug  mkboot  mntetc
(+1493 files in other folders)
