#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([distrotech-core], [14.9], [gregnietsky@gmail.com])

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S

# Checks for libraries.
AM_INIT_AUTOMAKE

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
